Services pages Fixed

--- a/services-2.html
+++ b/services-2.html
@@ -60,25 +60,305 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-12">
-						<h3 class="hero-title">ABOUT US</h3>
-						<p class="hero-subtitle">OUR COMPANY LIFE & VALUES</p>
+						<h3 class="hero-title">SERVICES</h3>
+						<p class="hero-subtitle">OUR EXPERTISE FOR BUSINESSES</p>
 					</div>
 				</div>
 			</div>
 		</section>
 		<!-- Hero END -->
-
 		<!-- Services START -->
+		<section id="services">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-sm-12 col-md-8 title-box col-centered">
+						<h3 class="s-title">Our blend of experience</h3>
+						<p class="s-title textcolor-bl">We create websites and campaigns that expose new opportunities</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12 col-md-6 col-lg-4 services-box">
+						<div class="services-item cheked-item">
+							<img src="img/icon/h-5-service-icon-1.png" alt="">
+							<h2>Service 1</h2>
+							<p>Culpa Lorem commodo quis amet ex voluptate. Ex consequat aute sit nisi sint ipsum dolore.</p>
+							<a href="#">Learn more <i class="fas fa-arrow-right"></i></a>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-4 services-box">
+						<div class="services-item">
+							<img src="img/icon/h-5-service-icon-2.png" alt="">
+							<h2>Service 2</h2>
+							<p>Culpa Lorem commodo quis amet ex voluptate. Ex consequat aute sit nisi sint ipsum dolore.</p>
+							<a href="#">Learn more <i class="fas fa-arrow-right"></i></a>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-4 services-box">
+						<div class="services-item">
+							<img src="img/icon/h-5-service-icon-3.png" alt="">
+							<h2>Service 3</h2>
+							<p>Culpa Lorem commodo quis amet ex voluptate. Ex consequat aute sit nisi sint ipsum dolore.</p>
+							<a href="#">Learn more <i class="fas fa-arrow-right"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<!-- Services END -->
-
 		<!-- Portfolio START -->
+		<section id="portfolio">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 col-md-7 player-text">
+						<h4 class="s-title fs-16">Professional & successful portfolio</h4>
+						<h2 class="s-title textcolor-bl">Our work — digital marketing case studies</h2>
+						<p class="s-subtitle">We work with forward-looking organizations who understand that joining the global startup economy is key to drive innovation and spur economic growth.</p>
+					</div>
+					<div class="col-sm-12 col-md-5 player-text port-viwe">
+						<button class="bluebg s-btn-sm btnstyle demobtn demobtn-outline">VIEW FULL CASES</button>
+					</div>
+				</div>
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 col-md-8">
+						<ul class="nav" role="tablist" id="customersCats">
+							<li class="nav-item"> <a class="nav-link active show port-link acvtive-link" href="#all" id="all-itme" data-toggle="tab" role="tab" aria-controls="all" aria-selected="true">All</a>
+							</li>
+							<li class="nav-item"> <a class="nav-link port-link" href="#marketing" id="marketing-itme" data-toggle="tab" role="tab" aria-controls="marketing" aria-selected="false">Marketing</a>
+							</li>
+							<li class="nav-item"> <a class="nav-link port-link" href="#sales" id="sales-itme" data-toggle="tab" role="tab" aria-controls="sales" aria-selected="false">Sales</a>
+							</li>
+							<li class="nav-item"> <a class="nav-link port-link" href="#design" id="design-itme" data-toggle="tab" role="tab" aria-controls="design" aria-selected="false">Desing</a>
+							</li>
+							<li class="nav-item"> <a class="nav-link port-link" href="#app" id="app-itme" data-toggle="tab" role="tab" aria-controls="app" aria-selected="false">App</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="row tabs-boxs">
+				<div class="col-sm-12">
+					<div class="tab-content" id="catsContent">
+						<div class="tab-pane fade show active" id="all" role="tabpanel" aria-labelledby="all-itme">
+							<div class="row">
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-1.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-2.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-3.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-4.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-5.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-6.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="tab-pane fade" id="marketing" role="tabpanel" aria-labelledby="marketing-itme">
+							<div class="row">
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-6.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-5.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-4.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-3.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-2.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-1.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="tab-pane fade" id="sales" role="tabpanel" aria-labelledby="sales-itme">
+							<div class="row">
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-1.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-2.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-3.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-4.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-5.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-6.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="tab-pane fade" id="design" role="tabpanel" aria-labelledby="design-itme">
+							<div class="row">
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-6.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-5.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-4.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-3.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-2.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-1.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="tab-pane fade" id="app" role="tabpanel" aria-labelledby="app-itme">
+							<div class="row">
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-1.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-2.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-3.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-4.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-5.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-6.png');">
+									<div class="overlay-portfolio">
+										<h3><a href="#">Creative Startup Project</a></h3>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<!-- Portfolio END -->
-
-		<!-- About START -->
-		<!-- About END -->
-
-		<!-- Newlester START -->
-		<!-- Newlester END -->
+		<!-- Innovative START -->
+		<section id="innovative">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 col-lg-6 cir-divs">
+						<div class="bg-big">
+							<img src="img/content/mask-big.png" alt="img">
+						</div>
+						<div class="bg-medium">
+							<img src="img/content/mask-smoll.png" alt="img">
+						</div>
+						<div class="bg-smoll">
+							<img src="img/content/mask-medium.png" alt="img">
+						</div>
+					</div>
+					<div class="col-sm-12 col-lg-5">
+						<h4 class="innovative-title textcolor s-mrb-20">Working Globally With Enterprise Partners</h4>
+						<h3 class="s-title s-mrb-30 textcolor-bl">Starting a business should be simple</h3>
+						<p class="s-subtitle text-left">Here is a subscription-based software, which means you just pay an annual subscription fee to use the software, in the cloud or on your own servers.</p>
+						<ul class="s-mrt-30 s-mrb-30 innvlist">
+							<li class="s-subtitle"><i class="fas fa-check textcolor"></i>Create and manage business process</li>
+							<li class="s-subtitle"><i class="fas fa-check textcolor"></i>Create and manage business process</li>
+							<li class="s-subtitle"><i class="fas fa-check textcolor"></i>Create and manage business process</li>
+						</ul>
+						<button class="bluebg s-btn-sm btnstyle demobtn">Get started</button>
+						<button class="bluebg s-btn-sm btnstyle demobtn demobtn-outline">Take a tour</button>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Innovative END -->
+		<!-- Contact START -->
+		<section id="contact">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12">
+						<h3 class="contact-title">Let’s work together</h3>
+						<p class="contact-info">We work with ecosystem leaders, corporations and startups worldwide. <br> How can we help you?</p>
+						<a href="#" class="h-5-btn-2 contact-btn">GET A QUOTE</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Contact END -->
 	</main>
 	<!-- Main END -->
 	<!-- Footer START -->
