--- a/contact-2.html
+++ b/contact-2.html
@@ -67,7 +67,92 @@
 			</div>
 		</section>
 		<!-- Hero END -->
-
+		<!-- About START -->
+		<section id="about">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="aboutinfo col-md-12 col-lg-7 col-centered s-mrb-125">
+						<h3 class="s-mrt-100 s-title fs-20">We listen to our customers</h3>
+						<h3 class="s-mrb-10 s-title textcolor-bl fs-36">We serve a wide range of companies</h3>
+						<p class="s-subtitle">We offer the following services to aspiring entrepreneurs looking to get their businesses off of the ground.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- About END -->
+		<!-- Video START -->
+		<section id="player">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-md-12 col-lg-6 player-text">
+						<h4>Empowering Startups</h4>
+						<h2>Development and product design solutions for startups</h2>
+						<p>Our process begins with a collaborative and holistic assessment to gain a robust understand of you, your business and key stakeholders. We will explore your business problems and needs co-creatively.</p>
+						<a href="#"><i class="fas fa-arrow-right"></i> WATCH PROMO VIDEO</a>
+					</div>
+					<div class="col-md-12 col-lg-6">
+						<div class="video-element" id="video-element-2">
+							<div class="video-element__poster" id="video-poster-2">
+								<img src="img/icon/h-5-play.png" class="btn-play">
+							</div>
+						</div>
+						<script type="text/template" id="video-2">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/rMIk7rbtg-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</script>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Video END -->
+		<!-- Contact START -->
+		<section id="contact">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 col-md-6 col-lg-6">
+						<form class="contact-form">
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Your Name">
+							</div>
+							<div class="form-group">
+								<input type="email" class="form-control" placeholder="Your Email">
+							</div>
+							<div class="form-group">
+								<textarea class="form-control" rows="3" placeholder="Your Message"></textarea>
+							</div>
+							<button class="bluebg s-btn-sm btnstyle s-mrt-45 sendbtn">Submit</button>
+						</form>
+					</div>
+					<div class="col-md-12 col-md-6 col-lg-4 player-text">
+						<h4>STAY CONNECTED WITH US</h4>
+						<h2>Let's discuss your case and how can we help you</h2>
+						<p>Want to give us a try? Skip the queue and send us an email explaining your idea. We'll come back to you with a bespoke demo based on your business needs, free of charge!</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Contact END -->
+		<!-- Map END -->
+		<section id="map">
+			<div class="row">
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2z0JvQvtC90LTQvtC9LCDQktC10LvQuNC60L7QsdGA0LjRgtCw0L3QuNGP!5e0!3m2!1sru!2s!4v1587626950211!5m2!1sru!2s"
+					width="100%" height="1000" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+			</div>
+		</section>
+		<!-- Map START -->
+		<!-- Contact START -->
+		<section id="contact-get">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12">
+						<h3 class="contact-title">Let’s work together</h3>
+						<p class="contact-info">We work with ecosystem leaders, corporations and startups worldwide. <br> How can we help you?</p>
+						<a href="#" class="h-5-btn-2 contact-btn">GET A QUOTE</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Contact END -->
 	</main>
 	<!-- Main END -->
 	<!-- Footer START -->
