--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,6 @@
 			</div>
 		</section>
 		<!-- About END -->
-
 		<!-- Faq START -->
 		<section id="faq">
 			<div class="container">
@@ -114,30 +113,29 @@
 						<p class="s-subtitle">We offer the following services to aspiring entrepreneurs looking to get their businesses off of the ground.</p>
 					</div>
 				</div>
-				<div class="row align-items-center">
+				<div class="row align-items-center s-mrt-80">
 					<div class="col-sm-12 col-md-6">
 						<div id="accordion">
 							<div class="card">
 								<div class="card-header" id="headingOne">
 									<h5 class="mb-0 s-title textcolor-bl fs-20">
-										1. How can we get funding for our startup?
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">+</button>
+										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">1. How can we get funding for our startup? <span>+</span></button>
 									</h5>
 								</div>
 								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
 									<div class="card-body">
 										<p class="s-subtitle">Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate. Culpa nisi sint adipisicing cillum velit est. Ipsum et irure eiusmod consectetur et ea dolor laboris voluptat consectetur.
 											Et mollit ex non sunt minim consequat quis. Anim laborum mollit culpa esse officia non ea exercitation enim etm culpa non voluptate lorem.</p>
-										<p><a href="#">READ MORE</a></p>
+										<p class="read"><a href="#">READ MORE</a></p>
 									</div>
 								</div>
 							</div>
 							<div class="card">
 								<div class="card-header" id="headingTwo">
 									<h5 class="mb-0 s-title textcolor-bl fs-20">
-										2. Do we need to write a business plan?
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseOne">
-											+
+										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+											2. Do we need to write a business plan?
+											<span>+</span>
 										</button>
 									</h5>
 								</div>
@@ -145,16 +143,16 @@
 									<div class="card-body">
 										<p class="s-subtitle">Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate. Culpa nisi sint adipisicing cillum velit est. Ipsum et irure eiusmod consectetur et ea dolor laboris voluptat consectetur.
 											Et mollit ex non sunt minim consequat quis. Anim laborum mollit culpa esse officia non ea exercitation enim etm culpa non voluptate lorem.</p>
-										<p><a href="#">READ MORE</a></p>
+										<p class="read"><a href="#">READ MORE</a></p>
 									</div>
 								</div>
 							</div>
 							<div class="card">
 								<div class="card-header" id="headingTre">
 									<h5 class="mb-0 s-title textcolor-bl fs-20">
-										3. How do I know you won't steal my idea?
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseTre" aria-expanded="true" aria-controls="collapseOne">
-											+
+										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseTre" aria-expanded="true" aria-controls="collapseTre">
+											3. How do I know you won't steal my idea?
+											<span>+</span>
 										</button>
 									</h5>
 								</div>
@@ -162,16 +160,16 @@
 									<div class="card-body">
 										<p class="s-subtitle">Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate. Culpa nisi sint adipisicing cillum velit est. Ipsum et irure eiusmod consectetur et ea dolor laboris voluptat consectetur.
 											Et mollit ex non sunt minim consequat quis. Anim laborum mollit culpa esse officia non ea exercitation enim etm culpa non voluptate lorem.</p>
-										<p><a href="#">READ MORE</a></p>
+										<p class="read"><a href="#">READ MORE</a></p>
 									</div>
 								</div>
 							</div>
 							<div class="card">
 								<div class="card-header" id="headingfr">
 									<h5 class="mb-0 s-title textcolor-bl fs-20">
-										4. Can we submit two applications?
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseFr" aria-expanded="true" aria-controls="collapseOne">
-											+
+										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseFr" aria-expanded="true" aria-controls="collapseFr">
+											4. Can we submit two applications?
+											<span>+</span>
 										</button>
 									</h5>
 								</div>
@@ -179,15 +177,16 @@
 									<div class="card-body">
 										<p class="s-subtitle">Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate. Culpa nisi sint adipisicing cillum velit est. Ipsum et irure eiusmod consectetur et ea dolor laboris voluptat consectetur.
 											Et mollit ex non sunt minim consequat quis. Anim laborum mollit culpa esse officia non ea exercitation enim etm culpa non voluptate lorem.</p>
-										<p><a href="#">READ MORE</a></p>
+										<p class="read"><a href="#">READ MORE</a></p>
 									</div>
 								</div>
 							</div>
 							<div class="card">
 								<div class="card-header" id="headingfv">
-									<h5 class="mb-0 s-title textcolor-bl fs-20">5. Will you sign an NDA?
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapsefv" aria-expanded="true" aria-controls="collapseOne">
-											+
+									<h5 class="mb-0 s-title textcolor-bl fs-20">
+										<button class="btn btn-link" data-toggle="collapse" data-target="#collapsefv" aria-expanded="true" a ria-controls="collapsefv">
+											5. Will you sign an NDA?
+											<span>+</span>
 										</button>
 									</h5>
 								</div>
@@ -195,40 +194,79 @@
 									<div class="card-body">
 										<p class="s-subtitle">Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate. Culpa nisi sint adipisicing cillum velit est. Ipsum et irure eiusmod consectetur et ea dolor laboris voluptat consectetur.
 											Et mollit ex non sunt minim consequat quis. Anim laborum mollit culpa esse officia non ea exercitation enim etm culpa non voluptate lorem.</p>
-										<p><a href="#">READ MORE</a></p>
+										<p class="read"><a href="#">READ MORE</a></p>
 									</div>
 								</div>
 							</div>
 							<div class="card">
 								<div class="card-header" id="headingsx">
-									<h5 class="mb-0 s-title textcolor-bl fs-20"> 6. How can we get funding for our startup?
+									<h5 class="mb-0 s-title textcolor-bl fs-20">
 										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseSx" aria-expanded="true" aria-controls="collapseOne">
-											+
+											6. How can we get funding for our startup?
+											<span>+</span>
 										</button>
 									</h5>
 								</div>
 								<div id="collapseSx" class="collapse show" aria-labelledby="headingsx" data-parent="#accordion">
 									<div class="card-body">
-										<p class="s-subtitle">Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate. Culpa nisi sint adipisicing cillum velit est. Ipsum et irure eiusmod consectetur et ea dolor laboris voluptat consectetur.
+										<p class="s-subtitle fs-16">Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate. Culpa nisi sint adipisicing cillum velit est. Ipsum et irure eiusmod consectetur et ea dolor laboris voluptat
+											consectetur.
 											Et mollit ex non sunt minim consequat quis. Anim laborum mollit culpa esse officia non ea exercitation enim etm culpa non voluptate lorem.</p>
-										<p><a href="#">READ MORE</a></p>
+										<p class="read"><a href="#">READ MORE</a></p>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-12 col-md-6">
-
+					<div class="col-sm-12 col-md-5 offset-md-1 s-mrt-30">
+						<div class="faq-conetn">
+							<img src="img/icon/faq-1.png"><span class="faq-title">Business consultation</span>
+							<p class="s-subtitle s-mrt-30">We offer the following services to aspiring entrepreneurs looking to get their businesses off of the ground.</p>
+							<p class="faq-more s-mrt-20"><a href="#">MORE</a></p>
+						</div>
+						<div class="faq-conetn">
+							<img src="img/icon/faq-2.png"><span class="faq-title">Business consultation</span>
+							<p class="s-subtitle s-mrt-30">We offer the following services to aspiring entrepreneurs looking to get their businesses off of the ground.</p>
+							<p class="faq-more s-mrt-20"><a href="#">MORE</a></p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 		<!-- Faq END -->
-
 		<!-- Contact START -->
-
+		<section id="contact">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="aboutinfo col-md-12 col-lg-7 col-centered s-mrb-125">
+						<h3 class="s-mrb-10 s-title textcolor-bl fs-30">Let’s work together!</h3>
+						<p class="s-subtitle">We want to know more about the needs of your startup. </p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12 col-md-6 col-lg-6">
+						<form class="contact-form">
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Your Name">
+							</div>
+							<div class="form-group">
+								<input type="email" class="form-control" placeholder="Your Email">
+							</div>
+							<div class="form-group">
+								<textarea class="form-control" rows="3" placeholder="Your Message"></textarea>
+							</div>
+							<button class="bluebg s-btn-sm btnstyle s-mrt-45 sendbtn">Submit</button>
+						</form>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-5 offset-lg-1">
+						<iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2z0JvQvtC90LTQvtC9LCDQktC10LvQuNC60L7QsdGA0LjRgtCw0L3QuNGP!5e0!3m2!1sru!2s!4v1587625645791!5m2!1sru!2s"
+							width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					</div>
+				</div>
+			</div>
+		</section>
 		<!-- Contact END -->
-
 		<!-- Newsletter START -->
 		<section id="news">
 			<div class="container">
